--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/style.css">
-    <title>KOP Coffee co. - Un mimo al alma - Inicio </title>
+    <title>KOP Coffee co. - Cafe, un mimo al alma - Inicio </title>
+    <meta name="description"
+        content="Bienvenido a nuestro oasis gastronómico, donde la pasión por el café de especialidad se combina con una exquisita selección de pastelería dulce y salada, así como una cautivadora variedad de coctelería de la casa. Deleita tu paladar con una fusión de sabores, desde tentadoras tartas y pasteles artesanales hasta suculentos bocadillos salados, cuidadosamente elaborados para satisfacer todos los antojos. Nuestros mixólogos expertos te sorprenderán con innovadoras creaciones de cócteles, fusionando ingredientes frescos con destilados de calidad superior, para ofrecerte una experiencia de bebidas única y emocionante. Disfruta de un ambiente acogedor y un servicio excepcional mientras te sumerges en una experiencia gastronómica inolvidable en nuestra cafetería de especialidad." />
+    <meta name="keywords"
+        content="Café, Coffee, dulces, salados, club de café, bebidas, café de especialidad, café de alta calidad, pastelería artesanal, coctelería de autor, cafetería acogedora, ambiente relajante, sabores exquisitos, baristas expertos, mezclas de café únicas, bebidas innovadoras, deleite culinario, café gourmet, experiencia gastronómica" />
 </head>
 
 <body>
@@ -26,7 +30,6 @@
             </div>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid header__padNone">
-                    <a class="navbar-brand" href="#"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -125,35 +128,37 @@
                     más especial!".</h2>
                 <ul class="clubkop__padNone">
                     <li>
-                        <div class="boton txtBoton vibrate-1">
+                        <div class="boton txtBoton vibrate-1 ">
                             <a class="colorCrema" href="./paginas/clubkop.html#clubkopform">UNIRME A CLUB KOP</a>
                         </div>
                     </li>
                 </ul>
             </div>
-
-            <ul class="clubkop__listCenter">
+            <div>
                 <h2 class="colorCrema posH2">INGRESA A CLUB KOP</h2>
-                <li>
-                    <div>
-                        <p>Usuario</p>
-                        <p class="intxt">id</p>
-                        <p>Contraseña</p>
-                        <p class="intxt">####</p>
-                    </div>
-                </li>
-                <li>
-                    <!-- Boton pensado en el futuro, para ir a promociones exclusivas. Debera consultar usuario y contraseña -->
-                    <div class="boton txtBoton shadow-drop-2-bottom">
-                        <a class="colorCrema " href="./paginas/clubkop.html">INGRESAR</a>
-                    </div>
-                </li>
-            </ul>
+                <ul class="clubkop__listCenter">
+                    <li>
+                        <div>
+                            <p class="colorCrema_op">Usuario</p>
+                            <p class="intxt">id</p>
+                            <p class="colorCrema_op">Contraseña</p>
+                            <p class="intxt">####</p>
+                        </div>
+                    </li>
+                    <li>
+                        <!-- Boton pensado en el futuro, para ir a promociones exclusivas. Debera consultar usuario y contraseña -->
+                        <div class="boton txtBoton shadow-drop-2-bottom">
+                            <a class="colorCrema " href="./paginas/clubkop.html">INGRESAR</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
         </section>
         <div>
             <a href="#arriba"><img width="50" height="50"
                     src="https://img.icons8.com/ios-filled/50/000000/double-up.png" alt="double-up"
-                    style="position: fixed;bottom: 10px;right: 2%;" /></a>
+                    style="position: fixed;bottom: 10px;right: 30px;" /></a>
         </div>
     </main>
 
@@ -195,7 +200,7 @@
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.4128659977505!2d-58.460196199999984!3d-34.56841839999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb56969e09651%3A0xac72ff00620859d4!2sBajamar!5e0!3m2!1ses-419!2sar!4v1693837666514!5m2!1ses-419!2sar"
                 width="300" height="250" style="border:0;padding: 2rem;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                referrerpolicy="no-referrer-when-downgrade" title="Mapa del café"></iframe>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
